Agregando guide style,buenas practicas

--- a/bowling.html
+++ b/bowling.html
@@ -10,13 +10,15 @@
 </head>
 <body>
     <div class="center">
-        <h2>CodeKata: The bowling game</h2>
-        <table class="center">
-            <td id="VistaBolosCaidos"></td>
-            <tr>
-                <td id="resultados"></td>
-            </tr>
-        </table><br> by: Jesús Macedo Vázquez
+      <h2>CodeKata: The bowling game</h2>
+      <table class="center">
+        <td id="VistaBolosCaidos">
+        </td>
+        <tr>
+          <td id="resultados"></td>
+        </tr>
+      </table>
+      <br> by: Jesús Macedo Vázquez
     </div>
     <script src="script.js"></script>
 </body>
